[package]
name = "smoosh"
version = "0.1.0"
authors = ["Ashley Hauck <khyperia@mozilla.com>"]
edition = "2018"

[dependencies]
bumpalo = "2.6.0"
jsparagus-ast = { path = "../../../jsparagus/rust/ast" }
jsparagus-emitter = { path = "../../../jsparagus/rust/emitter" }
jsparagus-parser = { path = "../../../jsparagus/rust/parser" }
